[package]
name = "blockchain-technologies-assignment-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features=["rustls-tls"], default-features=false }
secp256k1 = { version = "0.28.0", features = ["rand-std", "hashes"] }
tokio = { version = "1.33.0", features = ["full"] }
rust-crypto = "0.2.36"
serde_json = "1.0.107"
base64 = "0.21.5"
bs58 = "0.5.0"
sha256 = "1.4.0"
hex = "0.4.3"