[package]
name = "blockchain-technologies-assignment-4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.7.14"
borsh = "0.9.1"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }

[lib]
crate-type = ["cdylib", "lib"]